--- a/Styles.css
+++ b/Styles.css
@@ -24,6 +24,7 @@ section {
     border-radius: 3em;
     padding: 2%;
     margin: 5%;
+    margin-top: 5em;
     box-shadow: 5px 5px;
 }
 header > nav > a {
@@ -32,12 +33,11 @@ header > nav > a {
     color: var(--colour5);
     text-decoration: none;
     padding: 0;
-    margin: 0 20%;
-    border: 1px solid white;
     height: 1em;
     width: 5%;
     margin-top: 1em;
     text-align: center;
+    margin-left: 30%;
 }
 nav {
     width: 100%;
@@ -46,6 +46,7 @@ nav {
     background-color: var(--colour3);
     position: fixed;
     top: 0;
+    z-index: 3;
 }
 header {
     margin: 0;
@@ -80,4 +81,67 @@ address > a {
 }
 nav:hover {
     height: 5em;
+}
+label {
+    display: inline-block;
+    width: 100%;
+    color: var(--colour5);
+    margin-top: 2em;
+}
+input {
+    width: 100%;
+    color: var(--colour1);
+    border: none;
+    height: 2em;
+    background-color: #f1e2de;
+}
+textarea {
+    width: 100%;
+    color: var(--colour1);
+    border: none;
+    height: 2em;
+    background-color: #f1e2de;
+}
+button {
+    background-color: var(--colour5);
+    color: var(--colour1);
+    margin-top: 2em;
+    width: 10%;
+    margin-left: 40%;
+    height: 3em;
+}
+button:hover {
+    background-color: var(--colour4);
+    border: none;
+}
+.radio_label {
+    display: inline-block;
+    width: 100%;
+}
+.budget_input {
+    width: 5%;
+    accent-color: #000814;
+}
+.service_input {
+    width: 5%;
+    accent-color: #000814;
+}
+.gdpr_input {
+    width: 5%;
+    accent-color: #000814;
+}
+select {
+    display: inline-block;
+    width: 100%;
+    height: 2em;
+    color: var(--colour1);
+    border: none;
+    background-color: #f1e2de;
+}
+footer {
+    margin-top: 20em;
+}
+fieldset {
+    margin-top: 2em;
+    border-color: var(--colour5);
 }
